tests/sema/ok/08_call_pure.sg
@pure fn sq(x:float) -> float { return x * x; }
fn main() -> float { return sq(3); }